fix overflow issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -155,6 +155,11 @@ svg {
   border-right: 1px solid lightgrey;
 }
 
+.search__item > * {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .search__item:nth-last-child(2) {
   border: none;
 }
@@ -578,7 +583,7 @@ svg {
     display: flex;
   }
   .experiences__featured {
-    grid-template-columns: repeat(4, 95%);
+    grid-template-columns: repeat(4, 90%);
     grid-template-rows: auto;
     grid-template-areas: "bill sri buenos dive";
     overflow-x: auto;
